fixed padding/width/text overlapping

--- a/style/_section1.scss
+++ b/style/_section1.scss
@@ -50,12 +50,11 @@ section {
 
         .white_bg {
             width: 50%;
-            padding: 3rem;
 
             .text {
                 align-items: flex-start;
                 text-align: start;
-                width: 50%;
+                width: 75%;
                 gap: 1rem;
             }
         }
@@ -65,6 +64,16 @@ section {
             background: url("../images/desktop/image-transform.jpg");
             background-size: 100% 100%;
             background-repeat: no-repeat;
+        }
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    section {
+        .white_bg {
+            .text {
+                width: 40%;
+            }
         }
     }
 }
