--- a/style/_section2.scss
+++ b/style/_section2.scss
@@ -50,12 +50,12 @@
 
         .white_bg {
             width: 50%;
-            padding: 3rem;
+            padding: 0;
 
             .text {
                 align-items: flex-start;
                 text-align: start;
-                width: 50%;
+                width: 75%;
                 gap: 1rem;
             }
         }
@@ -65,6 +65,16 @@
             background: url("../images/desktop/image-stand-out.jpg");
             background-size: 100% 100%;
             background-repeat: no-repeat;
+        }
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .section2 {
+        .white_bg {
+            .text {
+                width: 40%;
+            }
         }
     }
 }
